--- a/mainpage.html
+++ b/mainpage.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>PremierLeagueStats.com: Home</title>
+    <link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type="text/css">
+    <link href="CSS/main.css" rel="stylesheet">
+    <link href="CSS/normalise.css" rel="stylesheet">
 </head>
 <body>
 
