--- a/Teams/arsenal.html
+++ b/Teams/arsenal.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Arsenal</title>
+    <link href="CSS/main.css" rel="stylesheet">
+    <link href="CSS/normalise.css" rel="stylesheet">
 </head>
 <body>
     
