--- a/Teams/arsenal.html
+++ b/Teams/arsenal.html
@@ -3,10 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <title>Arsenal</title>
-    <link href="CSS/main.css" rel="stylesheet">
-    <link href="CSS/normalise.css" rel="stylesheet">
+    <link href="/CSS/main.css" rel="stylesheet">
+    <link href="/CSS/normalise.css" rel="stylesheet">
 </head>
 <body>
+    <nav>
+    <ul>
+    <li><a href="/mainpage.html">Home</a></li>
+    <li><a href="#">ChooseTeam</a>
+        <ul>
+        <li><a href="/Teams/arsenal.html">Arsenal</a></li>
+        <li><a href="/Teams/astonvilla.html">Aston Villa</a></li>
+        <li><a href="/Teams/bournemouth.html">Bournemouth</a></li>
+        <li><a href="/Teams/chelsea.html">Chelsea</a></li>
+        <li><a href="/Teams/crystalpalace.html">Crystal Palace</a></li>
+        <li><a href="/Teams/everton.html">Everton</a></li>
+        <li><a href="leicestercity.html">Leicester City</a></li>
+        <li><a href="/Teams/Liverpool.html">Liverpool</a></li>
+        <li><a href="/Teams/mancity.html">Manchester City</a></li>
+        <li><a href="/Teams/manutd.html">Manchester United</a></li>
+        <li><a href="/Teams/newcastle.html">Newcastle United</a></li>
+        <li><a href="/Teams/norwichcity.html">Norwich City</a></li>
+        <li><a href="/Teams/southhampton.html">Southampton</a></li>
+        <li><a href="/Teams/stokecity.html">Stoke City</a></li>
+        <li><a href="/Teams/sunderland.html">Sunderland</a></li>
+        <li><a href="/Teams/swanseacity.html">Swansea City</a></li>
+        <li><a href="/Teams/tottenham.html">Tottenham Hotspurs</a></li>
+        <li><a href="/Teams/watford.html">Watford</a></li>
+        <li><a href="/Teams/westbrom.html">West Bromish Albion</a></li>
+        <li><a href="/Teams/westham.html">West Ham</a></li>
+        </ul></li>
+        <li><a href="#">ChooseIndividualStat</a>
+        <ul>
+        <li><a href="topscorer.html">Top Scorer</a></li>
+        <li><a href="#">Top Assister</a></li>
+        <li><a href="#">Most Clean Sheets</a></li>
+        </ul> </li>      
+    </ul>
+</nav>
     
     
    
